[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/textures/clock-cadran.png" type="Texture" id=1]
[ext_resource path="res://assets/textures/clock-background.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/clock-tick.png" type="Texture" id=3]
[ext_resource path="res://scenes/Clock.gd" type="Script" id=4]
[ext_resource path="res://assets/sounds/fx - Tick.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/shutdown.wav" type="AudioStream" id=6]

[node name="Clock" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Cadran" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Tick" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="TickTween" type="Tween" parent="."]

[node name="TickFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "FX"

[node name="CycleFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "FX"
